tests/sksl/errors/ComparisonDimensional.glsl
### Compilation failed:

error: 5: type mismatch: '==' cannot operate on 'float2', 'float'
error: 5: type mismatch: '==' cannot operate on 'float2', 'float2x2'
error: 5: type mismatch: '==' cannot operate on 'float2x2', 'float'
error: 6: type mismatch: '==' cannot operate on 'float', 'float2'
error: 6: type mismatch: '==' cannot operate on 'float2x2', 'float2'
error: 6: type mismatch: '==' cannot operate on 'float', 'float2x2'
error: 7: type mismatch: '!=' cannot operate on 'float2', 'float'
error: 7: type mismatch: '!=' cannot operate on 'float2', 'float2x2'
error: 7: type mismatch: '!=' cannot operate on 'float2x2', 'float'
error: 8: type mismatch: '!=' cannot operate on 'float', 'float2'
error: 8: type mismatch: '!=' cannot operate on 'float2x2', 'float2'
error: 8: type mismatch: '!=' cannot operate on 'float', 'float2x2'
error: 14: type mismatch: '==' cannot operate on 'float2x2', 'float3x3'
error: 14: type mismatch: '!=' cannot operate on 'float2x2', 'float3x3'
error: 20: type mismatch: '==' cannot operate on 'float2', 'float3'
error: 20: type mismatch: '!=' cannot operate on 'float2', 'float3'
16 errors
